--- a/web-ui/src/App.css
+++ b/web-ui/src/App.css
@@ -1,6 +1,30 @@
-.App {
-  margin: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
+html, body, #root {
+  height: 100vh;
+}
+
+.scalesTabPanel {
+  height: 100%;
+}
+
+.scalesGrid {
+  --grid-layout-gap: 8px;
+  --grid-column-count: 2;
+  --grid-item--min-width: 450px;
+  --gap-count: calc(var(--grid-column-count) - 1);
+  --total-gap-width: calc(var(--gap-count) * var(--grid-layout-gap));
+  --grid-item--max-width: calc((100% - var(--total-gap-width)) / var(--grid-column-count));
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(max(var(--grid-item--min-width), var(--grid-item--max-width)), 1fr));
+  grid-gap: var(--grid-layout-gap);
+
+  height: 100%;
+}
+
+.recordingTabPanel {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 #chart-yAxisWrapper {
@@ -9,9 +33,14 @@
 }
 
 .chart-container {
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.03);
 }
 
 .chart-scroll-container {
   overflow: auto hidden !important;
+}
+
+.chart-display-value {
+  position: absolute;
 }
