UI for uploading tap data, almost complete [wip]

--- a/web-ui/src/App.css
+++ b/web-ui/src/App.css
@@ -59,3 +59,20 @@ html, body, #root {
   right: 16px;
   top: 20%;
 }
+
+.dropzone {
+  border-width: 2px;
+  border-radius: 4px;
+  border-color: rgba(255, 255, 255, 0.12);
+  border-style: dashed;
+  background-color: rgba(255, 255, 255, 0.03);
+  color: rgba(255, 255, 255, 0.7);
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50vh;
+  padding: 16px;
+  outline: none;
+}
