--- a/web-ui/src/App.css
+++ b/web-ui/src/App.css
@@ -9,6 +9,7 @@ html, body, #root {
 .scales-grid {
   --grid-layout-gap: 8px;
   --grid-column-count: 2;
+  /* FIXME this is too small for mobile use cases */
   --grid-item--min-width: 450px;
   --gap-count: calc(var(--grid-column-count) - 1);
   --total-gap-width: calc(var(--gap-count) * var(--grid-layout-gap));
